# zaebali

./: .gitignore  01_architecture.md  02_implementation_order.md  03_technical_specs.md  04_cheatsheet.md  Cargo.toml  README.md  pair_discovery_spec.md
bins/feed-binance-futures/: Cargo.toml
bins/feed-binance-spot/: Cargo.toml
bins/feed-bybit-futures/: Cargo.toml
bins/feed-bybit-spot/: Cargo.toml
bins/feed-mexc-futures/: Cargo.toml
bins/feed-mexc-spot/: Cargo.toml
bins/feed-okx-futures/: Cargo.toml
bins/feed-okx-futures/src/: main.rs
bins/feed-okx-spot/: Cargo.toml
bins/pair-discovery/: Cargo.toml
bins/pair-discovery/src/: main.rs
bins/shm-init/: Cargo.toml
bins/shm-init/src/: main.rs
bins/spread-ctl/: Cargo.toml
bins/spread-engine/: Cargo.toml
bins/spread-tracker/: Cargo.toml
config/: config.toml  directions.toml  exchanges.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  directions.rs  lib.rs  symbols.rs  types.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: direction_builder.rs  generate.rs  generator.rs  lib.rs  normalize.rs  normalizer.rs  rest.rs  rest_client.rs  types.rs  validate.rs  validator.rs
crates/engine/: Cargo.toml
crates/feeds/: Cargo.toml
crates/shm/: Cargo.toml
crates/shm/src/: bitmap.rs  control.rs  health.rs  lib.rs  mmap.rs  price_store.rs  ring_buffer.rs  seqlock.rs
crates/tracker/: Cargo.toml
