[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/shm",
    "crates/discovery",
    "crates/feeds",
    "crates/engine",
    "crates/tracker",
    "bins/shm-init",
    "bins/pair-discovery",
    "bins/spread-ctl",
    "bins/spread-engine",
    "bins/spread-tracker",
    "bins/feed-binance-spot",
    "bins/feed-binance-futures",
    "bins/feed-bybit-spot",
    "bins/feed-bybit-futures",
    "bins/feed-mexc-spot",
    "bins/feed-mexc-futures",
    "bins/feed-okx-spot",
    "bins/feed-okx-futures",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
memmap2 = "0.9"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
