[package]
name = "spread-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common" }
shm = { path = "../../crates/shm" }
engine = { path = "../../crates/engine" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
