[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sonic-rs = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"
bincode = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
